# notssh-rs

./: Cargo.toml
migrations/: 1_init.sql
notssh-client/: Cargo.toml
notssh-client/src/: main.rs  shell.rs
notssh-ctl/: Cargo.toml
notssh-ctl/src/: main.rs
notssh-server/: Cargo.toml  build.rs  config.example.yaml
notssh-server/src/: api.rs  cli.rs  main.rs  model.rs
notssh-util/: Cargo.toml
notssh-util/src/: error.rs
proto/: notssh.proto  notsshcli.proto
