[package]
name = "notssh-client"
version = "0.1.0"
edition = "2021"

[dependencies]
notssh-util = { version = "0.1.0", path = "../notssh-util" }

anyhow = "1.0.71"
env_logger = "0.10.0"
clap = { version = "4.3.2", features = ["derive"] }
log = "0.4.17"
prost = "0.11"
tokio = { version = "1.28.1", features = ["rt", "macros", "rt-multi-thread", "process", "io-util"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = "0.9"

[build-dependencies]
tonic-build = "0.9"
